# advent-of-code

./: .gitignore
2022/day_1_calorie_counting/: solution_1.js  solution_2.js
2022/day_2_rock_paper_scissor/: package-lock.json  package.json  solution_1.js  solution_1.test.js  solution_2.js
2022/day_3_rucksack_reorganization/: package-lock.json  package.json  partOne.test.js  partTwo.test.js
2022/day_4_camp_cleanup/: pyproject.toml  test_camp_cleanup.py
2022/day_5_supply_stacks/: Cargo.toml
2022/day_5_supply_stacks/src/: lib.rs
2022/day_6_turning_trouble/: composer.json  phpunit.xml
2022/day_6_turning_trouble/src/: Console.php  Parser.php  SolveCommand.php
2022/day_7_no_space_left_on_device/: .mocharc.yaml  index.ts  package-lock.json  package.json  tsconfig.json
2022/day_7_no_space_left_on_device/src/: filesystem.spec.ts  filesystem.ts  prompt.spec.ts  prompt.ts  solver.spec.ts  solver.ts
2022/day_8_treetop_tree_house/: pyproject.toml
2022/day_8_treetop_tree_house/src/: quadcopter.py
2022/day_8_treetop_tree_house/tests/: quadcopter_test.py
2023/day_1_trebuchet/: problem.md  solve_part_one.js  solve_part_two.js
2023/day_2_cube_conunmdrum/: problem.md  solve_part_one.mjs  solve_part_two.mjs
2023/day_3_great_ratios/: problem.md  sample.txt  solve_part_one.mjs  solve_part_two.mjs
2023/day_4_scratchcards/: problem.md  sample.txt  solve_part_one.mjs  solve_part_two.mjs
2023/day_5_if_you_give_a_seed_a_fertilizer/: problem.md  solve_part_one.mjs  solve_part_two.mjs
2023/day_6_wait_for_it/: problem.md  solve_part_one.mjs  solve_part_two.mjs
(+1 files in other folders)
