[tool.poetry]
name = "day-4-camp-cleanup"
version = "0.1.0"
description = ""
authors = ["Your Name <hampus.walentin.olsen@gmail.com>"]
packages = [{include = "day_4_camp_cleanup"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
